--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,6 @@ img {
 
 button {
   cursor: pointer;
-  
 }
 .container {
   max-width: 1360px;
@@ -84,36 +83,74 @@ button {
   background-color: #4d4b4b;
   padding-top: 279px;
   padding-bottom: 282px;
-  background-image: url(../img/hero-bg.jpg); 
+  background-image: url(../img/hero-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 .hero-title {
   font-weight: 300;
-    font-size: 55px;
-    line-height: 1.2;
-    text-align: center;
-    color: #e9e9e9;
-    margin-bottom: 24px;
+  font-size: 55px;
+  line-height: 1.2;
+  text-align: center;
+  color: #e9e9e9;
+  margin-bottom: 24px;
 }
 .hero-text {
   font-weight: 400;
-    font-size: 22px;
-    line-height: 1.67;
-    text-align: center;
-    color: #e9e9e9;
-    margin-bottom: 32px;
+  font-size: 22px;
+  line-height: 1.67;
+  text-align: center;
+  color: #e9e9e9;
+  margin-bottom: 32px;
 }
 .hero-btn {
   border-radius: 5px;
-    min-width: 165px;
-    min-height: 48px;
-    background: #28a745;
-    display: block;
-    margin: 0 auto;
-    border: none;
-      line-height: 1.56;
-      text-align: center;
-      color: #fff;
+  min-width: 165px;
+  min-height: 48px;
+  background: #28a745;
+  display: block;
+  margin: 0 auto;
+  border: none;
+  line-height: 1.56;
+  text-align: center;
+  color: #fff;
+}
+
+.about {
+  background-color: #28a745;
+}
+
+.about .container {
+  display: flex;
+}
+
+.about-wrap {
+  padding: 80px 64px 80px 20px;
+}
+
+.about-subtitle {
+  margin-bottom: 8px;
+  font-size: 20px;
+  line-height: 1.65;
+}
+.about-title {
+  margin-bottom: 24px;
+  font-weight: 300;
+  font-size: 38px;
+  line-height: 1.26;
+}
+.about-text {
+  margin-bottom: 24px;
+  line-height: 1.56;
+}
+.about-btn {
+  font-family: inherit;
+  font-size: 18px;
+  line-height: 1.56;
+  color: #fff;
+  background-color: transparent;
+  padding: 11px 35px;
+  border: 1px solid #fff;
+  border-radius: 5px;
 }
