--- a/css/styles.css
+++ b/css/styles.css
@@ -154,3 +154,47 @@ button {
   border: 1px solid #fff;
   border-radius: 5px;
 }
+
+.cases {
+padding: 80px 0;
+}
+
+.cases .container {
+  padding: 0 28px;
+}
+.cases-subtitle {
+    font-size: 20px;
+    line-height: 1.65;
+    text-align: center;
+    color: #333;
+    margin-bottom: 24px;
+}
+
+.cases-title {
+  font-weight: 300;
+    font-size: 38px;
+    line-height: 1.26;
+    text-align: center;
+    color: #333;
+    margin-bottom: 24px;
+}
+
+.cases-text {
+    font-size: 18px;
+    line-height: 1.56;
+    text-align: center;
+    color: #333;
+    margin-bottom: 24px;
+}
+
+.cases-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  column-gap: 20px;
+  row-gap: 24px;
+}
+
+.cases-item {
+  width: calc((100% - 40px) / 3);
+}
